<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:text="@string/update_user_tv_oldPassword"
        android:textColor="@color/font_color_headline"
        android:textSize="@dimen/font_size_headline" />

    <EditText
        android:id="@+id/update_user_tf_oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:text="@string/update_user_tv_newPassword"
        android:textColor="@color/font_color_headline"
        android:textSize="@dimen/font_size_headline" />

    <EditText
        android:id="@+id/update_user_tf_newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:text="@string/update_user_tv_oldPasswordRepeat"
        android:textColor="@color/font_color_headline"
        android:textSize="@dimen/font_size_headline" />

    <EditText
        android:id="@+id/update_user_tf_newPasswordRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:text="@string/update_user_tv_emailAddress"
        android:textColor="@color/font_color_headline"
        android:textSize="@dimen/font_size_headline" />

    <EditText
        android:id="@+id/update_user_tf_emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/update_user_tf_emailAddress"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:text="@string/update_user_tv_emailAddressRepeat"
        android:textColor="@color/font_color_headline"
        android:textSize="@dimen/font_size_headline" />

    <EditText
        android:id="@+id/update_user_tf_emailAddressRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/update_user_tf_emailAddress"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/update_user_bt_commitChanges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_user_bt_commitChanges" />

    <Button
        android:id="@+id/update_user_bt_abortChanges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_user_bt_abortChanges" />

    <TextView
        android:id="@+id/update_user_tv_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_tv_feedback" />

</LinearLayout>