<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.joinsports.joinsports.LoginUser">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_user_tv_instruction"
            android:textStyle="bold"
            tools:typeface="sans"
            android:textSize="@dimen/font_size_instruction"
            android:layout_weight="0.10"
            android:text="@string/login_user_tv_instruction" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/login_user_tf_username"
            android:hint="@string/login_user_tf_username" />

        <EditText
            android:id="@+id/login_user_tf_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_user_tf_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_user_bt_login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:onClick="onClick_Login"
            android:text="@string/login_user_bt_login_user" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_user_tv_feedback"
            android:textSize="@dimen/font_size_tv_feedback" />

    </LinearLayout>
</RelativeLayout>
