<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReadUserFragment">

    <ImageView
        android:id="@+id/imageView_profile_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="16dp"
        app:srcCompat="@mipmap/fussball_spieler" />

    <TextView
        android:id="@+id/textView_username_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView_profile_picture"
        android:layout_below="@+id/imageView_profile_picture"
        android:layout_marginTop="33dp"
        android:text="@string/read_user_tf_username"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/read_user_tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_toEndOf="@+id/imageView_profile_picture"
        android:text="USERNAME"
        android:layout_alignBottom="@+id/textView_username_info" />

    <TextView
        android:id="@+id/textView_firstname_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_username_info"
        android:layout_below="@+id/textView_username_info"
        android:layout_marginTop="15dp"
        android:text="@string/read_user_tf_firstname"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/read_user_tv_firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FIRSTNAME"
        android:layout_above="@+id/textView_lastname_info"
        android:layout_alignStart="@+id/read_user_tv_username" />

    <TextView
        android:id="@+id/textView_lastname_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_firstname_info"
        android:layout_below="@+id/textView_firstname_info"
        android:layout_marginTop="19dp"
        android:text="@string/read_user_tf_lastname"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/read_user_tv_lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/read_user_tv_firstName"
        android:layout_alignTop="@+id/textView_lastname_info"
        android:text="LASTNAME" />

    <TextView
        android:id="@+id/textView_email_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_lastname_info"
        android:layout_below="@+id/textView_lastname_info"
        android:layout_marginTop="19dp"
        android:text="@string/read_user_tf_emailaddress"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/read_user_tv_emailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_email_info"
        android:layout_alignStart="@+id/read_user_tv_lastName"
        android:text="EMAIL ADDRESS" />

    <Button
        android:id="@+id/read_user_bt_editProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_email_info"
        android:layout_below="@+id/textView_email_info"
        android:layout_marginTop="28dp"
        android:text="@string/read_user_bt_editprofile" />
</RelativeLayout>
